--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "gulp serve",
     "build": "gulp",
-    "test": "cross-env NODE_ENV=test babel-node node_modules/isparta/bin/isparta cover ./node_modules/mocha/bin/_mocha -- --ui bdd --reporter spec --colors --compilers js:babel-core/register ./src/tests/*.test.js"
+    "test": "cross-env NODE_ENV=test babel-node ./node_modules/mocha/bin/_mocha ./src/tests/*.test.js"
   },
   "dependencies": {
     "babel-runtime": "6.23.0",
@@ -40,10 +40,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
     "chai": "^4.0.1",
-    "commitizen": "^2.8.2",
-    "coveralls": "^2.11.6",
     "cross-env": "5.0.0",
-    "cz-conventional-changelog": "2.0.0",
     "del": "^2.2.0",
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
@@ -52,12 +49,10 @@
     "gulp-nodemon": "^2.0.6",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-util": "^3.0.7",
-    "isparta": "4.0.0",
     "mocha": "3.4.2",
     "run-sequence": "^1.1.5",
     "supertest": "3.0.0",
-    "supertest-as-promised": "4.0.2",
-    "validate-commit-msg": "^2.6.1"
+    "supertest-as-promised": "4.0.2"
   },
   "license": "MIT",
   "babel": {
