--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "babel-runtime": "6.23.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^1.0.2",
     "bluebird": "3.5.0",
     "body-parser": "1.17.2",
     "compression": "1.6.2",
