--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "build": "gulp",
     "test": "cross-env NODE_ENV=test babel-node ./node_modules/mocha/bin/_mocha ./src/tests/*.test.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/pedrobarrostech/workshop-node-api.git"
+  },
   "dependencies": {
     "babel-runtime": "6.23.0",
-    "bcrypt": "^1.0.2",
     "bluebird": "3.5.0",
     "body-parser": "1.17.2",
     "compression": "1.6.2",
     "cors": "2.8.3",
-    "cross-env": "5.0.0",
     "debug": "^2.2.0",
     "express": "4.15.3",
     "express-jwt": "5.3.0",
@@ -32,6 +34,7 @@
     "winston": "2.3.1"
   },
   "devDependencies": {
+    "cross-env": "5.0.0",
     "babel-cli": "6.24.1",
     "babel-core": "6.24.1",
     "babel-plugin-add-module-exports": "0.2.1",
@@ -39,7 +42,6 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
     "chai": "^4.0.1",
-    "cross-env": "5.0.0",
     "del": "^2.2.0",
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
@@ -47,7 +49,6 @@
     "gulp-newer": "^1.1.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-util": "^3.0.7",
     "mocha": "3.4.2",
     "run-sequence": "^1.1.5",
     "supertest": "3.0.0",
